--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
                 <div class="flex flex-col">
                   <p data-cy="vServices" class="mb-2 text-left text-lg font-normal lg:text-xl text-secondary-50 h-fit">{{services.length}} verified services</p>
                   @for (serv of services; track serv; let pos = $index) {
-                    <a *ngIf="currentIndexServ === pos"
+                    <a data-cy="nameServices"  *ngIf="currentIndexServ === pos"
                        [style.display]="'-webkit-box'"
                        [style.webkitBoxOrient]="'vertical'"
                        [style.webkitLineClamp]="'2'"
@@ -36,7 +36,7 @@
                 <div class="flex flex-col">
                   <p data-cy="rPublishers" class="mb-2 text-left text-lg font-normal lg:text-xl text-secondary-50">{{publishers.length}} registered providers</p>
                   @for (pub of publishers; track pub; let pos = $index) {
-                    <a *ngIf="currentIndexPub === pos"
+                    <a data-cy="nameOrgs" *ngIf="currentIndexPub === pos"
                     [style.display]="'-webkit-box'"
                     [style.webkitBoxOrient]="'vertical'"
                     [style.webkitLineClamp]="'2'"
