org telephone number bug fixed for Ticket#831619 and Ticket#831414

--- a/src/app/pages/user-profile/profile-sections/org-info/org-info.component.html
+++ b/src/app/pages/user-profile/profile-sections/org-info/org-info.component.html
@@ -346,7 +346,7 @@
                                     </ul>
                                 </div>
                             }
-                            <input id="phoneNumber" formControlName="telephoneNumber" name="phoneNumber" type="number"
+                            <input min="0" id="phoneNumber" formControlName="telephoneNumber" name="phoneNumber" type="number"
                             [ngClass]="mediumForm.get('telephoneNumber')?.errors?.['invalidPhoneNumber'] == true ? 'border-red-600' : 'border-gray-300 dark:border-secondary-200'"
                             class="mb-2 bg-gray-50 border text-gray-900 text-sm rounded-r-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-secondary-300 dark:text-white">
                         </div>
